[package]
name = "rbdc-oracle"
version = "0.8.0"
edition = "2021"
description = "a simple oracle driver for rbatis"
readme = "Readme.md"
authors = ["chenpengfan<chenpengfan1996@gmail.com>"]
license = "Apache-2.0"

[dependencies]
rbs = "4.7"
rbdc = "4.8"
oracle = { version="0.6", features = ["chrono"]}
serde = "1"
serde_json = "1"
futures-core = { version = "0.3", default-features = false }
chrono = "0.4"
bigdecimal = { version = "0.4.0", features = ["serde"] }
tokio = {version="1",features=["fs", "net", "rt", "rt-multi-thread", "time", "io-util"]}
url = "2.5.4"
