[package]
name = "rbdc-oracle"
version = "0.10.0"
edition = "2024"
description = "Oracle driver for rbdc"
readme = "Readme.md"
authors = ["chenpengfan<chenpengfan1996@gmail.com>"]
license = "Apache-2.0"

[dependencies]
rbs = "4.8"
rbdc = { version = "4.9", default-features = false }
oracle = { version = "0.6", features = ["chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-core = { version = "0.3", default-features = false }
futures-util = { version = "0.3", features = ["alloc", "sink"] }
futures-channel = { version = "0.3", default-features = false, features = ["sink", "alloc", "std"] }
chrono = "0.4"
log = "0.4"
bigdecimal = { version = "0.4.1", features = ["serde"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
url = "2.5.4"
either = "1.6.1"
crossfire = { version = "3.1", default-features = false }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
