[package]
name = "example"
version = "0.6.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
rbs = "4.8"
rbdc = { version = "4.9", default-features = false }
rbdc-oracle = { path = "../" }
rbatis = { version = "4.9", features = ["debug_mode"] }
bigdecimal = { version = "0.4", features = ["serde"] }
fast_log = "1.7"
tokio = { version = "1", features = ["full"] }
